# MeshSolve

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
include/: f2c.h  lapack_interface.h  meshsolve.h
src/: demo.py  main.c  meshsolve.c  meshsolve.h
